--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2024"
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
+ws = { package = "rocket_ws", version = "0.1.1" }
 
+async-stream = "0.3"
+futures = "0.3"
 [dev-dependencies]
 rand = "0.8"
