--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 rocket = { version = "0.5.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 ws = { package = "rocket_ws", version = "0.1.1" }
+serde_json = "1.0"
 
 async-stream = "0.3"
 futures = "0.3"
