--- a/chatfront/app.json
+++ b/chatfront/app.json
@@ -9,7 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.matdev2.chatfront"
     },
     "android": {
       "adaptiveIcon": {
