--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rocket = { version = "0.5.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 ws = { package = "rocket_ws", version = "0.1.1" }
 serde_json = "1.0"
+uuid = { version = "1", features = ["v4"] }
 
 async-stream = "0.3"
 futures = "0.3"
