--- a/front/package.json
+++ b/front/package.json
@@ -1,43 +1,39 @@
 {
-  "name": "chatfront",
+  "name": "front",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "DARK_MODE=media expo run:android",
-    "ios": "DARK_MODE=media expo run:ios",
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
     "web": "DARK_MODE=media expo start --web",
-    "test": "jest --watchAll",
     "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
   },
   "dependencies": {
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@expo/html-elements": "^0.4.2",
-    "@expo/vector-icons": "^14.0.2",
-    "@gluestack-style/react": "^1.0.57",
+    "@expo/vector-icons": "^14.1.0",
     "@gluestack-ui/button": "^1.0.14",
-    "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
-    "@gluestack-ui/themed": "^1.1.73",
     "@gluestack-ui/toast": "^1.0.9",
-    "@loadable/babel-plugin": "^5.16.1",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/native": "^7.1.6",
+    "ajv": "^8.17.1",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "^53.0.9",
+    "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
+    "expo-image": "~2.1.7",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
+    "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
@@ -52,20 +48,18 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "~4.10.0",
-    "react-native-sse": "^1.2.1",
     "react-native-svg": "^15.2.0",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
-    "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~9.2.0",
     "jscodeshift": "^0.15.2",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
