--- a/chatfront/package.json
+++ b/chatfront/package.json
@@ -30,6 +30,7 @@
     "@loadable/babel-plugin": "^5.16.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "amqplib": "^0.10.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
@@ -50,21 +51,23 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-sse": "^1.2.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
+    "autoprefixer": "^10.4.21",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "jscodeshift": "^0.15.2",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.3.3"
   },
   "private": true
