--- a/pgbo/Cargo.toml
+++ b/pgbo/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 tokio-postgres = "*"
 tokio = "*"
 rocket = "0.5.1"
+toml = "0.8"
+serde = { version = "1.0", features = ["derive"] }
