--- a/pgbo/Cargo.toml
+++ b/pgbo/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 tokio-postgres = "*"
-tokio = "*"
+tokio = { version = "*", features = ["full"] }
 rocket = "0.5.1"
 toml = "0.8"
 serde = { version = "1.0", features = ["derive"] }
